@@ -1,3 +1,11 @@
+2014-04-18  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvpropedit, mmg's header editor: bug fix: fixed a failed
+        assertion in libEBML when writing the same changes twice to
+        certain files (those for which a seek head with a single entry
+        pointing to the elements modified by mkvpropedit/mmg's header
+        editor; e.g. x264 creates such files). Fixes #1007.
+
 2014-03-22  Moritz Bunkus  <moritz@bunkus.org>
 
         * mkvmerge: bug fix: reading fonts embedded in SSA/ASS files was
